[gd_scene load_steps=13 format=3 uid="uid://r8v7c6gg8g7t"]

[ext_resource type="Script" path="res://scripts/pet_inventory.gd" id="1_oo1mi"]
[ext_resource type="Texture2D" uid="uid://bix7vrvca3w85" path="res://assets/pet_inventory_ui/boreas.png" id="3_6egkh"]
[ext_resource type="PackedScene" uid="uid://dk2asr4hu8gp0" path="res://scenes/pet.tscn" id="3_6642u"]
[ext_resource type="FontFile" uid="uid://d2k0eexoqka6k" path="res://assets/lato_font/Lato-Regular.ttf" id="3_cj6b6"]
[ext_resource type="Texture2D" uid="uid://cbn21w1p8jquw" path="res://assets/pet_inventory_ui/pet_inventory_frame.png" id="3_nepex"]
[ext_resource type="Texture2D" uid="uid://bw5ya5ibmayi3" path="res://assets/pet_inventory_ui/pet_inventory_grid.png" id="3_r0n0m"]
[ext_resource type="Texture2D" uid="uid://mugkgy21cdu4" path="res://assets/pet_inventory_ui/zephyrus.png" id="4_fydg1"]
[ext_resource type="Texture2D" uid="uid://bkwnld0lwbn1v" path="res://assets/pet_inventory_ui/pet_inventory_panel.png" id="5_qeuqq"]
[ext_resource type="Texture2D" uid="uid://bxobj4i01qmg1" path="res://assets/pet_inventory_ui/notus.png" id="5_qy2tc"]
[ext_resource type="Texture2D" uid="uid://crjewt4oivh1h" path="res://assets/pet_inventory_ui/eurus.png" id="6_fnxbt"]
[ext_resource type="Texture2D" uid="uid://dfulo7prjgxwx" path="res://assets/pet_inventory_ui/pet_inventory_background.png" id="6_wj6fb"]
[ext_resource type="PackedScene" uid="uid://b7dn7q1xvr4oc" path="res://scenes/freing_pet_popup.tscn" id="12_iedv0"]

[node name="petInventoryVariant" type="Control" groups=["Inventory"]]
clip_contents = true
layout_direction = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_oo1mi")
metadata/_tab_index = 3

[node name="names" type="GridContainer" parent="."]
z_index = 7
custom_minimum_size = Vector2(1730, 920)
layout_mode = 0
offset_left = 241.475
offset_top = 167.704
offset_right = 1971.47
offset_bottom = 1348.7
scale = Vector2(0.75, 0.75)
theme_override_constants/h_separation = 130
theme_override_constants/v_separation = 255
columns = 6

[node name="Label" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label2" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label3" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label4" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label5" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label6" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label7" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label8" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label9" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label10" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label11" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label12" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label13" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label14" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label15" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label16" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label17" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label18" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label19" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label20" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label21" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label22" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label23" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label24" type="Label" parent="names"]
z_index = 1
texture_filter = 3
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cj6b6")
theme_override_font_sizes/font_size = 23
text = "Aromatherapy"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="genders" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 178.698
offset_top = 154.664
offset_right = 636.698
offset_bottom = 458.664
scale = Vector2(0.65, 0.65)
theme_override_constants/h_separation = 251
theme_override_constants/v_separation = 255
columns = 6

[node name="AnimatedSprite2D" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D2" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D3" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D4" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D5" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D6" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D7" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D8" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D9" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D10" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D11" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D12" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D13" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D14" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D15" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D16" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D17" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D18" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D19" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D20" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D21" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D22" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D23" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="AnimatedSprite2D24" type="TextureButton" parent="genders"]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("3_6egkh")

[node name="PetInventoryFrame" type="Sprite2D" parent="."]
position = Vector2(960.013, 540.243)
texture = ExtResource("3_nepex")

[node name="VBoxContainer" type="VBoxContainer" parent="PetInventoryFrame"]
offset_left = -874.432
offset_top = -422.0
offset_right = -793.432
offset_bottom = -86.0
scale = Vector2(0.655, 0.655)
theme_override_constants/separation = -4

[node name="boreas_filter" type="Button" parent="PetInventoryFrame/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_6egkh")
flat = true

[node name="zephyrus_filter" type="Button" parent="PetInventoryFrame/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_fydg1")
flat = true

[node name="notus_filter" type="Button" parent="PetInventoryFrame/VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_qy2tc")
flat = true

[node name="eurus_filter" type="Button" parent="PetInventoryFrame/VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_fnxbt")
flat = true

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(1466, 920)
layout_mode = 0
offset_left = 164.0
offset_top = 125.929
offset_right = 1894.0
offset_bottom = 1296.93
scale = Vector2(0.75, 0.75)
columns = 6

[node name="Control" type="CenterContainer" parent="GridContainer"]
clip_contents = true
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="GridContainer/Control"]
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
flat = true
metadata/_edit_use_anchors_ = true

[node name="1" parent="GridContainer/Control" instance=ExtResource("3_6642u")]
position = Vector2(-116.778, 132.565)

[node name="Control2" type="CenterContainer" parent="GridContainer"]
clip_contents = true
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="GridContainer/Control2"]
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
flat = true

[node name="2" parent="GridContainer/Control2" instance=ExtResource("3_6642u")]
position = Vector2(-129.033, 131.817)

[node name="Control3" type="CenterContainer" parent="GridContainer"]
clip_contents = true
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="GridContainer/Control3"]
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
flat = true

[node name="3" parent="GridContainer/Control3" instance=ExtResource("3_6642u")]
position = Vector2(-143.172, 126.461)

[node name="Control4" type="CenterContainer" parent="GridContainer"]
clip_contents = true
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="GridContainer/Control4"]
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
flat = true

[node name="4" parent="GridContainer/Control4" instance=ExtResource("3_6642u")]
position = Vector2(-144.039, 126.461)

[node name="Control5" type="CenterContainer" parent="GridContainer"]
clip_contents = true
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Button5" type="Button" parent="GridContainer/Control5"]
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
flat = true

[node name="5" parent="GridContainer/Control5" instance=ExtResource("3_6642u")]
position = Vector2(-142.621, 126.461)

[node name="Control6" type="CenterContainer" parent="GridContainer"]
clip_contents = true
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Button6" type="Button" parent="GridContainer/Control6"]
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
flat = true

[node name="6" parent="GridContainer/Control6" instance=ExtResource("3_6642u")]
position = Vector2(-138.833, 142.466)

[node name="Control7" type="CenterContainer" parent="GridContainer"]
clip_contents = true
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Button7" type="Button" parent="GridContainer/Control7"]
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
flat = true

[node name="7" parent="GridContainer/Control7" instance=ExtResource("3_6642u")]
position = Vector2(-137.619, 142.466)

[node name="Control8" type="CenterContainer" parent="GridContainer"]
clip_contents = true
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Button8" type="Button" parent="GridContainer/Control8"]
custom_minimum_size = Vector2(285, 285)
layout_mode = 2
flat = true

[node name="8" parent="GridContainer/Control8" instance=ExtResource("3_6642u")]
position = Vector2(-143.172, 137.836)

[node name="PetInventoryGrid2" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(796.071, 566.328)
scale = Vector2(0.65, 0.65)
texture = ExtResource("3_r0n0m")

[node name="PetInventoryPanel" type="Sprite2D" parent="."]
position = Vector2(1661.32, 552.737)
texture = ExtResource("5_qeuqq")

[node name="PetInventoryBackground" type="Sprite2D" parent="."]
position = Vector2(795.671, 566.519)
scale = Vector2(0.65, 0.65)
texture = ExtResource("6_wj6fb")

[node name="free_pets" type="Button" parent="."]
layout_mode = 0
offset_left = 1528.77
offset_top = 159.423
offset_right = 1676.77
offset_bottom = 190.423
text = "Free selection"

[node name="pet_check" type="GridContainer" parent="."]
z_index = 2
layout_mode = 0
offset_left = 339.506
offset_top = 317.518
offset_right = 1233.51
offset_bottom = 425.518
theme_override_constants/h_separation = 185
theme_override_constants/v_separation = 185
columns = 6

[node name="CheckBox" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox2" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox3" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox4" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox5" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox6" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox7" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox8" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox9" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox10" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox11" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox12" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox13" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox14" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox15" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox16" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox17" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox18" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox19" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox20" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox21" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox22" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox23" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="CheckBox24" type="CheckBox" parent="pet_check"]
layout_mode = 2

[node name="freing_pet_popup" parent="." instance=ExtResource("12_iedv0")]
visible = false
z_index = 18
position = Vector2(697.457, 453.088)

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_order_changed" from="." to="." method="_on_child_order_changed"]
[connection signal="pressed" from="PetInventoryFrame/VBoxContainer/boreas_filter" to="." method="_on_boreas_filter_pressed"]
[connection signal="pressed" from="PetInventoryFrame/VBoxContainer/zephyrus_filter" to="." method="_on_zephyrus_filter_pressed"]
[connection signal="pressed" from="PetInventoryFrame/VBoxContainer/notus_filter" to="." method="_on_notus_filter_pressed"]
[connection signal="pressed" from="PetInventoryFrame/VBoxContainer/eurus_filter" to="." method="_on_eurus_filter_pressed"]
[connection signal="pressed" from="GridContainer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Control2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/Control3/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GridContainer/Control4/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="GridContainer/Control5/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="GridContainer/Control6/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="GridContainer/Control7/Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="GridContainer/Control8/Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="free_pets" to="." method="_on_free_pets_pressed"]
[connection signal="free" from="freing_pet_popup" to="." method="_on_freing_pet_popup_free"]
